# intellij

examples/scala/with_bzlmod/: MODULE.bazel
examples/scala/with_bzlmod/hello/: BUILD  Hello.scala
